--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,12 @@
-#root {
+body {
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: 'Gelasio', serif;
+  
+}
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +47,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
