--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,5 +10,10 @@ h1 {
   margin: 0;
   font-family: 'UnifrakturCook', cursive;
   font-size: 4em;
+  cursor: pointer;
+}
+
+@media (max-width: 720px) {
+  h1 { font-size: 2em; }
 }
 
