--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,10 +1,10 @@
 .home-page {
- height: 85vh;
  padding: 20px;
 }
 
-h2 {
+.home-page-title {
   text-align: center;
+  margin-bottom: 55px;
 }
 
 .cards-container {
