--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,3 +4,12 @@ body {
   padding: 0;
   font-family: 'Gelasio', serif;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  text-decoration: underline;
+}
