--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,8 +2,8 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom: thin solid lightgrey;
-  height: 15vh;
+  border-bottom: double lightgrey;
+  height: 12vh;
 }
 
 h1 {
@@ -16,4 +16,3 @@ h1 {
 @media (max-width: 720px) {
   h1 { font-size: 2em; }
 }
-
